unpackaged/main/default/objects/appirio_core__Key__c/appirio_core__Key__c.object-meta.xml
<CustomObject>
    <description>Reserved for internal use.</description>
    <label>Deprecated:Key</label>
    <nameField>
        <displayFormat>KEY-{0000}</displayFormat>
        <label>Key Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Keys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>