unpackaged/main/default/objects/appirio_core__Key__c/fields/appirio_core__Expenses_Only_Used__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Expenses_Only_Used__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of licenses in use by expenses only users</description>
    <label>Expenses Only Used</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>