unpackaged/main/default/objects/appirio_core__Key__c/fields/appirio_core__Key_Value__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Key_Value__c</fullName>
    <label>Key Value</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>