unpackaged/main/default/objects/appirio_core__Key__c/fields/appirio_core__Open_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Open_Enrollment__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total number of licenses available for open enrollment feature</description>
    <label>Open Enrollment</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>