unpackaged/main/default/objects/appirio_core__Key__c/fields/appirio_core__Open_Enrollment_Used__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Open_Enrollment_Used__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of licenses of open enrollment feature currently used</description>
    <label>Open Enrollment Used</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>