unpackaged/main/default/objects/appirio_core__Key__c/fields/appirio_core__Resource__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Resource__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total number of active resources available</description>
    <label>Resource</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>