unpackaged/main/default/objects/appirio_core__Key__c/listViews/appirio_core__All.listView-meta.xml
<ListView>
    <fullName>appirio_core__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>